refactor(common): 优化分布式锁和频控切面实现
- 移除不必要的LockType枚举导入
- 删除FrequencyControl注解中的isOneKeyMultiplyControl属性
- 为DistributionLockAspect添加方法元数据和哈希值缓存
- 使用构造器注入替换@Autowired注解
- 优化WebLogAspect参数处理逻辑并添加缓存机制
- 新增CircuitBreakerWithIsolation熔断器+信号量隔离示例
- 简化SlidingWindowFrequencyController遍历逻辑
- 新增SerialBiFunction支持序列化的双参数函数接口
- 移除AbstractLocalCache和AbstractRedisStringCache中的作者信息
- 优化AbstractFrequencyControlService去重逻辑
- 新增InstBuilder快速对象构建工具类
- 新增ServiceExecutor和服务管理器统一异常处理
- 优化RedisUtil滑动窗口Lua脚本实现
- 新增TransactionUtil编程式事务工具类
- 新增LambdaUtil从Lambda表达式提取元数据工具类